--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -2,9 +2,9 @@ name: Dlgreen.com - Frontend CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master]
   pull_request:
-    branches: [ main ]
+    branches: [ master]
 
 jobs:
   build:
