add redirect for host-meta

--- a/_app/etc/nginx/default.conf
+++ b/_app/etc/nginx/default.conf
@@ -11,4 +11,8 @@ server {
     location /.well-known/webfinger {
         return 301 https://mastodon.dlgreen.com$request_uri;
     }
+
+    location /.well-known/host-meta {
+        return 301 https://mastodon.dlgreen.com$request_uri;
+    }
 }
