Add Nextcloud card and cal well known endpoint redirects

--- a/_app/etc/nginx/default.conf
+++ b/_app/etc/nginx/default.conf
@@ -15,4 +15,13 @@ server {
     location /.well-known/host-meta {
         return 301 https://mastodon.dlgreen.com$request_uri;
     }
+
+    location /.well-known/caldav {
+        return 301 https://nextcloud.dlgreen.com$request_uri;
+    }
+
+    location /.well-known/carddav {
+        return 301 https://nextcloud.dlgreen.com$request_uri;
+    }
+
 }
