Update default.conf to hopefully better redirect uris

--- a/_app/etc/nginx/default.conf
+++ b/_app/etc/nginx/default.conf
@@ -17,11 +17,11 @@ server {
     }
 
     location /.well-known/caldav {
-        return 301 https://nextcloud.dlgreen.com$request_uri;
+        return 301 https://nextcloud.dlgreen.com/remote.php/dav;
     }
 
     location /.well-known/carddav {
-        return 301 https://nextcloud.dlgreen.com$request_uri;
+        return 301 https://nextcloud.dlgreen.com/remote.php/dav;
     }
 
 }
