Update .well-known to include synapse
https://element-hq.github.io/synapse/latest/delegate.html

--- a/_app/etc/nginx/default.conf
+++ b/_app/etc/nginx/default.conf
@@ -24,4 +24,8 @@ server {
         return 301 https://nextcloud.dlgreen.com/remote.php/dav;
     }
 
+    location /.well-known/matrix/server {
+        return 200 '{"m.server": "synapse.dlgreen.com:443"}'
+    }
+
 }
