Update default.conf missing ;

--- a/_app/etc/nginx/default.conf
+++ b/_app/etc/nginx/default.conf
@@ -25,7 +25,8 @@ server {
     }
 
     location /.well-known/matrix/server {
-        return 200 '\{"m.server": "synapse.dlgreen.com:443"\}'
+        default_type application/json
+        return 200 '{"m.server": "synapse.dlgreen.com:443"}';
     }
 
 }
